--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "cognesy/instructor-utils",
-  "description": "Collection of utility classes",
+  "version": "0.14.3",
+  "description": "Collection of utility classes used by Instructor library",
   "license": "MIT",
   "homepage": "https://instructorphp.com",
   "support": {
@@ -18,7 +19,17 @@
       "Cognesy\\Utils\\": "src/"
     }
   },
-  "version": "0.14.2",
+  "autoload-dev": {
+    "psr-4": {
+      "Cognesy\\Utils\\Tests\\": "tests/"
+    }
+  },
+  "config": {
+    "allow-plugins": {
+      "pestphp/pest-plugin": true
+    },
+    "sort-packages": true
+  },
   "require": {
     "php": "^8.2",
     "ext-ctype": "*",
@@ -36,7 +47,19 @@
     "gioni06/gpt3-tokenizer": "^1.2"
   },
   "require-dev": {
-    "roave/security-advisories": "dev-latest"
+    "roave/security-advisories": "dev-latest",
+    "icanhazstring/composer-unused": "^0.9.0",
+    "jetbrains/phpstorm-attributes": "^1.2",
+    "maglnet/composer-require-checker": "^4.16",
+    "pestphp/pest": "^2.34",
+    "phpstan/phpstan": "^1.11",
+    "vimeo/psalm": "^6.0",
+    "eftec/bladeone": "^4.16"
+  },
+  "scripts": {
+    "tests": "@php vendor/bin/pest",
+    "phpstan": "@php vendor/bin/phpstan -c phpstan.neon",
+    "psalm": "@php vendor/bin/psalm"
   },
   "suggest": {
     "eftec/bladeone": "For BladeOne template engine support",
