--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "cognesy/instructor-utils",
-  "version": "0.17.11",
+  "version": "1.0-rc1",
   "description": "Collection of utility classes used by Instructor library",
   "license": "MIT",
   "homepage": "https://instructorphp.com",
@@ -39,7 +39,6 @@
     "ext-xmlreader": "*",
     "adbario/php-dot-notation": "^3.3",
     "aimeos/map": "^3.8",
-    "psr/event-dispatcher": "^1.0",
     "psr/log": "^3.0",
     "vlucas/phpdotenv": "^5.6",
     "webuni/front-matter": "^2.0",
