--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "cognesy/instructor-utils",
-  "version": "1.0-rc4",
+  "version": "1.0.0-rc5",
   "description": "Collection of utility classes used by Instructor library",
   "license": "MIT",
   "homepage": "https://instructorphp.com",
@@ -59,5 +59,7 @@
     "tests": "@php vendor/bin/pest",
     "phpstan": "@php vendor/bin/phpstan -c phpstan.neon",
     "psalm": "@php vendor/bin/psalm"
-  }
+  },
+  "minimum-stability": "rc",
+  "prefer-stable": true
 }
