--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,5 @@
 {
   "name": "cognesy/instructor-utils",
-  "version": "1.0.0-RC7",
   "description": "Collection of utility classes used by Instructor library",
   "license": "MIT",
   "homepage": "https://instructorphp.com",
@@ -61,5 +60,6 @@
     "psalm": "@php vendor/bin/psalm"
   },
   "minimum-stability": "RC",
-  "prefer-stable": true
+  "prefer-stable": true,
+  "version": "1.0.0-RC8"
 }
