--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
     "aimeos/map": "^3.8",
     "psr/log": "^3.0",
     "vlucas/phpdotenv": "^5.6",
-    "webuni/front-matter": "^2.0",
+    "symfony/yaml": "^6.0|^7.0",
     "twig/twig": "^3.0",
     "gioni06/gpt3-tokenizer": "^1.2"
   },
