Extracting common core from ToolUse and Chat

--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
     "adbario/php-dot-notation": "^3.3",
     "aimeos/map": "^3.8",
     "psr/log": "^3.0",
+    "psr/container": "^2.0",
     "vlucas/phpdotenv": "^5.6",
     "symfony/yaml": "^6.0|^7.0",
     "twig/twig": "^3.0",
